--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rls-analysis = "0.6.7"
 serde = "1.0.11"
 serde_derive = "1.0.11"
 serde_json = "1.0.2"
+notify = "4.0.1"
 
 [build-dependencies]
 error-chain = "0.11"
